<resources>
    <string name="app_name">JamFinder</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="sign_in_name_hint">Pseudo</string>
    <string name="sign_in_mail_hint">E-Mail Address</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="sign_in_confirm_password_hint">Confirm Password</string>
    <string name="sign_in_submit">Create Account</string>
    <string name="sign_member">"Already a member? Login"</string>
    <string name="sign_in_creating">Creating Account...</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="home_login_button">Log in !</string>
    <string name="home_sign_in_button">Get a free account !</string>
    <string name="home_message">You\'re not logged in, what do you want to do ?</string>

    <string name="shared_preferences_key">jamFinderSharedPreferences</string>

    <string name="user_logged_in_preferences_key">loggedInUser</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="login_pseudo_hint">Pseudo</string>
    <string name="login_password_hint">Password</string>
    <string name="login_submit">Login</string>
    <string name="login_not_account">No account yet? Create one</string>
    <string name="login_authenticating">Authenticating...</string>

    <string name="recycler_card_jam_edit">Edit Jam</string>
    <string name="recycler_card_jam_delete">Delete Jam</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="main_drawer_profile">Profile</string>
    <string name="main_drawer_friends">Friends</string>
    <string name="main_drawer_jams">My Jams</string>
    <string name="main_drawer_history">Past Jams</string>
    <string name="main_drawer_logout">Logout</string>

    <string name="create_jam_address_hint">Address</string>
    <string name="create_jam_name_hint">Jam\'s name</string>
    <string name="create_jam_details_hint">Details</string>
    <string name="create_jam_button">Create Jam</string>
    <string name="create_jam_Created">Done</string>

    <string name="jam_list_preferences_key">ListeJam</string>
    <string name="jam_details_jam_intent_key">jamcliquee</string>
    <string name="jam_details_details">Details</string>
    <string name="jam_details_edit">Edit</string>
    <string name="jam_details_not_going">Not going</string>
    <string name="jam_details_going">Join in !</string>
    <string name="login_mail_hint">Email</string>
    <string name="login_passwordConfirm_hint">Confirm Password</string>
    <string name="main_search">Search</string>

    <string-array name="main_drawer_menu_entries">
        <item>Profile</item>
        <item>Friends</item>
        <item>My Jams</item>
        <!--<item>My Activities</item> -->
        <item>Past Jams</item>
        <item>Logout</item>
    </string-array>

</resources>
