<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.upmc.jamfinder.activities.SignInActivity">

    <EditText
        android:id="@+id/sign_in_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/sign_in_name_hint" />

    <EditText
        android:id="@+id/sign_in_mail_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sign_in_name_edit"
        android:hint="@string/sign_in_mail_hint" />

    <EditText
        android:id="@+id/sign_in_password_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/sign_in_mail_edit"
        android:layout_centerHorizontal="true"
        android:hint="@string/sign_in_password_hint" />

    <EditText
        android:id="@+id/sign_in_confirm_password_edit"


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/sign_in_password_edit"
        android:layout_centerHorizontal="true"
        android:hint="@string/sign_in_confirm_password_hint" />

    <Button
        android:id="@+id/sign_in_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_confirm_password_edit"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in_submit"
        android:onClick="onSubmitForm"
        />

</RelativeLayout>
