<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.upmc.jamfinder.activities.CreateJamActivity"
    android:orientation="vertical"
    android:scrollbars="vertical"

    >

    <EditText
        android:id="@+id/create_jam_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_jam_name_hint"
        android:layout_margin="4dp"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_jam_address_hint"
        android:id="@+id/create_jam_address"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"/>

    <EditText
        android:id="@+id/create_jam_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="8"
        android:hint="@string/create_jam_details_hint"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:scrollbars="vertical"
        android:layout_margin="4dp"
        />

    <Button
        android:id="@+id/create_jam_button"
        android:layout_gravity="bottom|center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_jam_button"
        android:layout_margin="8dp"/>
</LinearLayout>
