<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.upmc.jamfinder.activities.HomeActivity"

    android:layout_gravity="center"

    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView

        android:id="@+id/home_message"
        android:text="@string/home_message"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:padding="20dp"
        />

    <Button

        android:id="@+id/home_login_button"

        android:text="@string/home_login_button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/home_sign_in_button"

        android:text="@string/home_sign_in_button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
